[project]
name = "harn-sdk"
version = "0.0.0"
description = "Python SDK for the Harn Agents API"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Burin Labs" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/burin-labs/harn-sdk-python"
Issues = "https://github.com/burin-labs/harn-sdk-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harn"]
