[project]
name = "harn-sdk"
version = "0.1.0a0"
description = "Python SDK for the Harn Agents API"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Burin Labs" }]
dependencies = [
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.13.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.0,<10.0.0",
  "pytest-asyncio>=1.4.0,<2.0.0",
  "ruff>=0.15.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/burin-labs/harn-sdk-python"
Issues = "https://github.com/burin-labs/harn-sdk-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
